--- a/css/index.css
+++ b/css/index.css
@@ -2,41 +2,57 @@ body{
   text-align: center;
 }
 
+/* Header */
 nav{
+  padding: 30px 25px;
+}
+
+.navbar{
+  border-radius: 0px;
   background: #404040;
-  color: lightGray;
-  padding: 20px 0px;
+  margin-bottom: 0px;
 }
 
-.iconsLang{
-  position: fixed;
-  right: 10px;
-  top: 30px;
-}
-
-.iconsLang img{
-  margin-right: 10px;
-}
-
-.iconsLang img:hover{
+h1{
+  margin: 0px 0px;
   cursor: pointer;
+  color: lightGrey;
 }
 
+.nav-item{
+  cursor: pointer;
+  margin-right: 15px;
+}
+
+/* Projects */
 .project{
-  height: 50%;
+  height: 500px;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .project:hover{
-  opacity: 0.9;
+  opacity: 0.8;
+}
+
+hr{
+  width: 80%;
+  border: solid 1px #f2f2f2;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .cv{
-  background-image: url(../res/cv.png);
+  background-image: url(../res/cv.jpeg);
+}
+
+.more-projects{
+  background-image: url(../res/more-projects.jpg);
 }
 
 .btn{
   position: relative;
-  top : 38%;
+  top : 210px;
   padding: 20px 20px;
   font-size: 30px;
   box-shadow: 5px 5px 2px #888888;
@@ -45,4 +61,38 @@ nav{
 .btn:hover{
   background-color: #004ca0;
   border-color: #004ca0;
+}
+
+/* Responsiveness */
+@media(min-width:768px){
+  h1{
+    margin-top: -5px;
+    position: absolute;
+    left: 50%;
+    margin-left: -100px;
+  }
+
+  .nav-item:hover img{
+    width: 38px;
+    height: auto;
+    margin-top: -8px;
+  }
+}
+
+@media(max-width:767px){
+  .nav-item img{
+    width: 42px;
+    margin-top: 10px;
+    height: auto;
+  }
+}
+
+/* Utils */
+.noselect {
+  -webkit-touch-callout: none;
+    -webkit-user-select: none;
+     -khtml-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
 }
