--- a/css/index.css
+++ b/css/index.css
@@ -86,6 +86,23 @@ hr{
     margin-top: 10px;
     height: auto;
   }
+
+  .project{
+    height: 300px;
+  }
+
+  h1{
+    margin-top: 3px;
+  }
+
+  .btn{
+    top: 110px;
+  }
+
+  hr{
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
 }
 
 @media(max-width:360px){
