--- a/css/index.css
+++ b/css/index.css
@@ -9,14 +9,9 @@ nav{
 
 .navbar{
   border-radius: 0px;
+  border: none;
   background: #404040;
   margin-bottom: 0px;
-}
-
-h1{
-  margin: 0px 0px;
-  cursor: pointer;
-  color: lightGrey;
 }
 
 .nav-item{
@@ -24,18 +19,48 @@ h1{
   margin-right: 35px;
 }
 
-/* Projects */
-.project{
-  height: 500px;
-  background-repeat: no-repeat;
-  background-size: cover;
+.navbar-title{
+  margin: 0px 0px;
+  cursor: pointer;
+  color: lightGrey;
 }
 
-hr{
-  width: 80%;
-  border: solid 1px #bfbfbf;
-  margin-top: 30px;
+/* Landscape */
+.landscape{
+    height: 100%;
+    background-image: url(../res/landscape.jpg);
+    background-size: cover;
+    position: sticky;
+}
+
+.landscape-title,.landscape-button{
+    text-align: center;
+    position: relative;
+    top: 40%;
+}
+
+.landscape-title{
+    width: 100%;
+    color: white;
+    margin: 0px 0px;
+}
+
+/* Projects */
+
+.projects{
+    background: darkgrey;
+}
+
+.project{
+  height: 500px;
+  width: 70%;
+  border-radius: 32px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
   margin-bottom: 30px;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .cv{
@@ -91,7 +116,7 @@ hr{
 
 /* Responsiveness */
 @media(min-width:768px){
-  h1{
+  .navbar-title{
     margin-top: -5px;
     position: absolute;
     left: 50%;
@@ -102,39 +127,6 @@ hr{
     width: 38px;
     height: auto;
     margin-top: -8px;
-  }
-}
-
-@media(max-width:767px){
-  .nav-item img{
-    width: 42px;
-    margin-top: 10px;
-    height: auto;
-  }
-
-  .project{
-    height: 300px;
-  }
-
-  h1{
-    margin-top: -5px;
-  }
-
-  .btn{
-    top: 120px;
-    padding: 15px 15px;
-    font-size: 26px;
-  }
-
-  hr{
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
-}
-
-@media(max-width:360px){
-  .navbar-toggle{
-    margin-right: -8px;
   }
 }
 
