--- a/css/header.css
+++ b/css/header.css
@@ -1,12 +1,9 @@
-nav{
-  padding: 30px 25px;
-}
-
 .navbar{
   border-radius: 0px;
   border: none;
   background: #333333;
   margin-bottom: 0px;
+  height: 80px;
 }
 
 .nav-item{
@@ -14,8 +11,44 @@ nav{
   margin-right: 35px;
 }
 
+.navbar-brand{
+    position: absolute;
+    width: 100%;
+    left: 0;
+    text-align: center;
+    height: auto;
+}
+
 .navbar-title{
   margin: 0px 0px;
   cursor: pointer;
   color: #f2f2f2;
+  display:inline-block;
+}
+
+.icon-site{
+    width: 60px;
+    display:block;
+    margin:auto;
+}
+
+
+/* Responsiveness */
+@media(min-width:768px){/*
+  .navbar-title{
+    margin-top: -5px;
+    position: absolute;
+    left: 50%;
+    margin-left: -160px;
+  }
+
+  .icon-site{
+      margin-top: -15px;
+  }
+
+  .nav-item:hover img{
+    width: 38px;
+    height: auto;
+    margin-top: -8px;
+  }*/
 }
