--- a/css/header.css
+++ b/css/header.css
@@ -9,7 +9,6 @@
 
 .navbar-collapse{
     background: #333333;
-
 }
 
 .nav-item{
@@ -24,7 +23,7 @@
     left: 0;
     text-align: center;
     height: auto;
-    padding-top: 10px;
+    padding-top: 15px;
 }
 
 .navbar-title{
@@ -70,17 +69,18 @@
   }
 
   .navbar-title{
-      font-size: 1.4em;
+      font-size: 1.3em;
   }
 
   .icon-site{
       width: 37px;
       margin-right: 5px;
+      margin-top: -8px;
   }
 
   .span-us,.span-fr{
       color: #f2f2f2;
-      font-size: 1.2em;
+      font-size: 1.1em;
       margin-left: 5px;
   }
 
