--- a/css/landscape.css
+++ b/css/landscape.css
@@ -9,35 +9,40 @@
     z-index: -1;
 }
 
+.content{
+    width: 100%;
+    height: 100%;
+}
+
 .intro{
     height: 100%;
     position: relative;
+    top: 25%;
 }
-
 
 .landscape-title{
     width: 100%;
     font-size: 2.2em;
     color: #99ccff;
-    margin: 0px 0px;
     margin-bottom: 100px;
     opacity: 0.2;
 }
 
 .landscape-subtitle{
-    font-size: 3em;
+    font-size: 1.5em;
     color: white;
-    margin: 0px 0px;
     margin-bottom: 120px;
     width: 100%;
+    opacity: 0;
 }
 
 .landscape-button{
-    font-size: 2.5em;
+    font-size: 2.2em;
     font-weight: 500;
     border-radius: 6px;
     padding: 5px 10px;
     border: solid white 2px;
+    opacity: 0;
 }
 
 .landscape-button:hover{
@@ -52,22 +57,31 @@
 
 @media(max-width:767px){
 
-    .landscape-title,.landscape-subtitle,.landscape-button{
-        top: 10%;
-    }
 
     .landscape-title{
         font-size: 1.5em;
-        margin-bottom: 20px;
+        margin-bottom: 40px;
     }
 
     .landscape-subtitle{
-        font-size: 1.7em;
-        margin-bottom: 40px;
+        font-size: 1em;
+        margin-bottom: 60px;
     }
 
     .landscape-button{
         font-size: 1.4em;
     }
 
+}
+
+@media(max-height:800px){
+    .intro{
+        top: 15%;
+    }
+}
+
+@media(max-height:450px){
+    .intro{
+        top: 5%;
+    }
 }
