--- a/css/projects.css
+++ b/css/projects.css
@@ -1,5 +1,6 @@
 .projects{
     height: 100%;
+    margin-top: -50px;
 }
 
 .project{
@@ -56,7 +57,7 @@
     .btn{
         top : 120px;
         padding: 15px 15px;
-        font-size: 25px;
+        font-size: 22px;
     }
 
 }
