small css fixes

--- a/css/landscape.css
+++ b/css/landscape.css
@@ -23,7 +23,7 @@
 .landscape-title{
     width: 100%;
     font-size: 2.2em;
-    color: #ccccff;
+    color: #e6e6ff;
     margin-bottom: 100px;
     opacity: 0.2;
 }
