--- a/css/projects.css
+++ b/css/projects.css
@@ -20,15 +20,15 @@
 }
 
 .agent-web{
-  background-image: url(../res/agent-web.jpg);
+  background-image: url(../res/agentweb.jpg);
 }
 
 .top-shape{
-  background-image: url(../res/topshape.png);
+  background-image: url(../res/top-shape.png);
 }
 
 .more-projects{
-  background-image: url(../res/more-projects.jpg);
+  background-image: url(../res/wip.jpg);
 }
 
 .btn{
